force-app/main/default/objects/Integration_Operation__mdt/Integration_Operation__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for generic inbound and outbound integration operations.</description>
    <label>Integration Operation</label>
    <pluralLabel>Integration Operations</pluralLabel>
</CustomObject>