force-app/main/default/objects/Integration_Operation__mdt/fields/Approved_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Approved_Base_URL__c</fullName>
    <label>Approved Base URL</label>
    <length>255</length>
    <type>Url</type>
</CustomField>