force-app/main/default/objects/Integration_Operation__mdt/fields/Cursor_Query_Param__c.field-meta.xml
<CustomField>
    <fullName>Cursor_Query_Param__c</fullName>
    <label>Cursor Query Parameter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>