force-app/main/default/objects/Integration_Operation__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>