force-app/main/default/objects/Integration_Operation__mdt/fields/Headers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Headers_JSON__c</fullName>
    <label>Headers JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>