force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Idempotency_Path__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Idempotency_Path__c</fullName>
    <label>Inbound Idempotency Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>