force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Max_Age_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Max_Age_Seconds__c</fullName>
    <label>Inbound Maximum Age Seconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>