force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Secret_Key__c</fullName>
    <label>Inbound Secret Reference Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>