force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Signature_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Signature_Algorithm__c</fullName>
    <label>Inbound Signature Algorithm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>