force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Signature_Header__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Signature_Header__c</fullName>
    <label>Inbound Signature Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>