force-app/main/default/objects/Integration_Operation__mdt/fields/Inbound_Timestamp_Header__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Timestamp_Header__c</fullName>
    <label>Inbound Timestamp Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>