force-app/main/default/objects/Integration_Operation__mdt/fields/Maximum_Pages__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pages__c</fullName>
    <label>Maximum Pages</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>