force-app/main/default/objects/Integration_Operation__mdt/fields/Next_Path__c.field-meta.xml
<CustomField>
    <fullName>Next_Path__c</fullName>
    <label>Next Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>