force-app/main/default/objects/Integration_Operation__mdt/fields/Page_Query_Param__c.field-meta.xml
<CustomField>
    <fullName>Page_Query_Param__c</fullName>
    <label>Page Query Parameter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>