force-app/main/default/objects/Integration_Operation__mdt/fields/Pagination_Type__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Type__c</fullName>
    <label>Pagination Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>