force-app/main/default/objects/Integration_Operation__mdt/fields/Persistence_Mode__c.field-meta.xml
<CustomField>
    <fullName>Persistence_Mode__c</fullName>
    <label>Persistence Mode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>