force-app/main/default/objects/Integration_Operation__mdt/fields/Query_Params_JSON__c.field-meta.xml
<CustomField>
    <fullName>Query_Params_JSON__c</fullName>
    <label>Query Parameters JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>