force-app/main/default/objects/Integration_Operation__mdt/fields/Relative_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Relative_Endpoint__c</fullName>
    <label>Relative Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>