force-app/main/default/objects/Integration_Operation__mdt/fields/Request_Cardinality__c.field-meta.xml
<CustomField>
    <fullName>Request_Cardinality__c</fullName>
    <label>Request Cardinality</label>
    <length>30</length>
    <type>Text</type>
</CustomField>