force-app/main/default/objects/Integration_Operation__mdt/fields/Response_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Content_Type__c</fullName>
    <label>Response Content Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>