force-app/main/default/objects/Integration_Operation__mdt/fields/Response_Id_Path__c.field-meta.xml
<CustomField>
    <fullName>Response_Id_Path__c</fullName>
    <label>Response ID Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>