force-app/main/default/objects/Integration_Operation__mdt/fields/Retry_Delay_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay_Seconds__c</fullName>
    <label>Retry Delay Seconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>