force-app/main/default/objects/Integration_Operation__mdt/fields/Retry_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Retry_Statuses__c</fullName>
    <label>Retry Statuses</label>
    <length>120</length>
    <type>Text</type>
</CustomField>