force-app/main/default/objects/Integration_Operation__mdt/fields/Salesforce_External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_External_Id_Field__c</fullName>
    <label>Salesforce External ID Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>