force-app/main/default/objects/Integration_Operation__mdt/fields/Since_Query_Param__c.field-meta.xml
<CustomField>
    <fullName>Since_Query_Param__c</fullName>
    <label>Since Query Parameter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>